--- a/src/ThreadAndMirror/ProductsBundle/Resources/public/css/section.css
+++ b/src/ThreadAndMirror/ProductsBundle/Resources/public/css/section.css
@@ -52,7 +52,7 @@
         position: relative;
         top: 0 !important;
         left: 0 !important;
-        margin: 0 0 5vw;
+        margin: 0 0 10vw;
         padding: 0;
         float: left;
     }
